--- a/Nodes/BXLedge-000001/node-config/Makefile
+++ b/Nodes/BXLedge-000001/node-config/Makefile
@@ -3,8 +3,6 @@
 VER = 1.0
 BASE = BMBedge
 
-default: set
-
 set:
 	export HZN_ORG_ID='local-cluster'
 	export HZN_EXCHANGE_USER_AUTH='iamapikey:p4J5UA_LxQ0dCEqaRyIgfgePyEDir3O5m3tLauW8A-LD'
@@ -18,7 +16,7 @@ unregister-node:
 	hzn unregister -fr
 	hzn node list
 
-register-policy:
+register-node:
 	hzn register --policy=BXLedge-node.policy.json
 	hzn node list
 
